discussion/kv_engine/176659/176659_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Wait for memory to reduce before setting new quota

Change-Id: I0d707b894fa6b7218340c3a86fa93e8f61a80a7b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-29 18:57:14.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-29 19:19:55.000000000
Message: 
Patch Set 9: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21289/ : ABORTED

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
[2022-06-29T19:03:09.254Z] Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
[2022-06-29T19:03:09.254Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
[2022-06-29T19:03:09.254Z] (623 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21289/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21289/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19522/ : ABORTED

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
[2022-06-29T19:12:48.946Z] Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
[2022-06-29T19:12:48.946Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
[2022-06-29T19:12:48.946Z] (252 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19522/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19522/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17569/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/bucket_quota_change_task.cc b/engines/ep/src/bucket_quota_change_task.cc
index 3dc568402..244569fd3 100644
--- a/engines/ep/src/bucket_quota_change_task.cc
+++ b/engines/ep/src/bucket_quota_change_task.cc
@@ -66,8 +66,8 @@ bool BucketQuotaChangeTask::run() {
 
             state = ChangeState::WaitingForMemoryReclamation;
             // Check again soon
-            snooze(engine-&gt;getConfiguration().getBucketQuotaChangeTaskWaitTime
-                   ());
+            snooze(engine-&gt;getConfiguration()
+                           .getBucketQuotaChangeTaskWaitTime());
         }
         break;
     case ChangeState::WaitingForMemoryReclamation:
@@ -80,8 +80,8 @@ bool BucketQuotaChangeTask::run() {
                     engine-&gt;getEpStats().mem_high_wat);
 
             // Check again soon
-            snooze(engine-&gt;getConfiguration().getBucketQuotaChangeTaskWaitTime
-                   ());
+            snooze(engine-&gt;getConfiguration()
+                           .getBucketQuotaChangeTaskWaitTime());
         }
         break;
     case ChangeState::Done:
diff --git a/engines/ep/tests/module_tests/bucket_quota_change_test.cc b/engines/ep/tests/module_tests/bucket_quota_change_test.cc
index 190783559..88454438d 100644
--- a/engines/ep/tests/module_tests/bucket_quota_change_test.cc
+++ b/engines/ep/tests/module_tests/bucket_quota_change_test.cc
@@ -327,7 +327,8 @@ TEST_P(BucketQuotaChangeTest, QuotaChangeDownMemoryUsageHigh) {
     flushVBucketToDiskIfPersistent(vbid, 1);
 
     // Poke the item and the pager setting to ensure that we will evict it
-    store-&gt;getVBucket(vbid)-&gt;ht.findOnlyCommitted(key)
+    store-&gt;getVBucket(vbid)
+            -&gt;ht.findOnlyCommitted(key)
             .storedValue-&gt;setFreqCounterValue(0);
     engine-&gt;getConfiguration().setItemEvictionAgePercentage(0);
     engine-&gt;getConfiguration().setItemEvictionFreqCounterAgeThreshold(255);
@@ -365,8 +366,8 @@ TEST_P(BucketQuotaChangeTest, QuotaChangeDownMemoryUsageHigh) {
 
     if (STParameterizedBucketTest::isMagma()) {
         // Allow magma 10 seconds to reduce memory.
-        auto timeout = std::chrono::steady_clock::now() +
-                std::chrono::seconds(10);
+        auto timeout =
+                std::chrono::steady_clock::now() + std::chrono::seconds(10);
         while (engine-&gt;getEpStats().getMaxDataSize() != newQuota) {
             if (timeout &lt; std::chrono::steady_clock::now()) {
                 // We waited too long for magma to reduce memory usage. Either

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17569/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47182/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
..\kv_engine\engines\ep\tests\ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
(45 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47182/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18418/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:43:43: error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
                     /*initialSleepTime*/ INT_MAX,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18418/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:43:43:
error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18418/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39634/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_quota_change_task.h:43:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39634/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8190/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
[2022-06-29T19:12:37.634Z] Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
[2022-06-29T19:12:37.634Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
[2022-06-29T19:12:37.634Z] (43 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8190/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8091/ : FAILURE

Compile error at [2022-06-29T19:01:39.710Z] ../kv_engine/engines/ep/src/bucket_quota_change_task.h:43:43:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8091/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20302/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
[2022-06-29T19:03:47.698Z] Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
[2022-06-29T19:03:47.698Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
[2022-06-29T19:03:47.698Z] (74 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20302/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20648/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [2/47]: test max_size - water_mark changes...../kv_engine/engines/ep/tests/ep_testsuite_basic.cc:119 Test failed: `" (Expected `100", got `1000000" - Incorrect smaller size.)
[2022-06-29T19:03:00.866Z] (96 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20648/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28681/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group 
[2022-06-29T19:06:11.762Z] Unexpected stat: ep_bucket_quota_change_task_wait_time from stat group config
[2022-06-29T19:06:11.762Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7832 Test failed: `stats error" (missing stats)
[2022-06-29T19:06:11.762Z] (139 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28681/ )
----------------------------------------------------------------------------------------------------------------------
